# aargh64

./: .envrc  .gitignore  LICENSE  flake.nix
.github/workflows/: build.yaml
k8s/: admission_controller.yaml.tpl  cluster.yaml  crd.yaml  deployment.yaml  po.yaml  test.yaml
rust/: Cargo.nix  Cargo.toml
rust/src/: crdgen.rs  lib.rs  main.rs  platform_override.rs
