[package]
name = "aargh64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
# async-std = { version = "1.11.0", features = ["attributes"] }
futures = "0.3.21"
json-patch = "0.2.6"
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
kube = { version = "0.73.0", features = ["runtime", "derive", "ws", "admission"] }
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
# tide = "0.16.0"
# tide-rustls = "0.3.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "rt", "macros"] }
# hyper = { version = "0.14.13", features = ["client", "http1", "stream", "tcp"] }
hyper = "0.14.13"
hyper-tls = "0.5.0"
warp = { version = "0.3", default-features = false, features = ["tls"] }
oci-distribution = { version = "0.9.2", default-features = false, features = ["rustls-tls"] }
