[package]
name = "aargh64"
version = "0.1.0"
edition = "2021"
default-run = "aargh64"

[[bin]]
name = "aargh64"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
kube = { version = "0.73.1", default-features = false, features = [
  "client",
  "rustls-tls",
  "admission",
  "derive",
] }
schemars = "0.8.10"
warp = { version = "0.3.2", default-features = false, features = ["tls"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
json-patch = "0.2.6"
oci-distribution = { version = "0.9.2", default-features = false, features = [
  "rustls-tls",
] }
lazy_static = "1.4.0"
